[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
serde = { version = "1.0.150", features = ["derive"] }
serde-json-wasm = "0.5.0"
plotters = "0.3.4"
plotters-canvas = "0.3.0"
postcard = "1.0.2"
rmp-serde = "1.1.1"
human_format = "1.0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'HtmlButtonElement',
  'EventListener',
  'HtmlCollection',
  'HtmlCanvasElement',
  'HtmlInputElement',
  'HtmlSelectElement',
  'HtmlTextAreaElement',
  'HtmlTableElement',
  'HtmlTableCaptionElement',
  'HtmlTableRowElement',
  'HtmlTableCellElement',
  'WebSocket',
  'BinaryType',
  'MessageEvent',
  'console'
]

[dependencies.common]
path = "../common"
