[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.25"
poem = { version = "1.3.50", features = ["websocket"] }
rmp-serde = "1.1.1"
rustflake = "0.1.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
tracing-subscriber = "0.3.16"
uuid = "1.2.2"
rand = "0.8.5"
lazy_static = "1.4.0"

[dependencies.common]
path = "../common"
